--- a/100 Hour project/index.html
+++ b/100 Hour project/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Christian Barrett">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Acme&family=Dancing+Script:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
     <title>Whisker Haven</title>
 </head>
 <body>
@@ -32,12 +33,12 @@
 
 <section id="firstSection">
     <div id="findKitty">
-    <span class="soulmate">Come find your future soulmate and save a kitties a life!</span>
-    <a href="#">View all cats</a>
+    <span class="soulmate">Come find your soulmate and save a kitties a life!</span>
+    <a class="viewCats" href="#">View all cats</a>
 </div>
 <div class="findKittyPic">
-    <img src="https://placekitten.com/g/500/600">
-</div>
+    <img class="kittyPicture" src="pictures/four-cute-cats-20650677.jpg" alt="Kitty Picture">
+  </div>  
 </section>
 <div id="containerOne">
 <section id="picturesNLinks">
@@ -97,4 +98,5 @@
        </div>
 </footer>
 </body>
+<script src="js/script.js"></script>
 </html>
