--- a/100 Hour project/index.html
+++ b/100 Hour project/index.html
@@ -33,7 +33,7 @@
 
 <section id="firstSection">
     <div id="findKitty">
-    <span class="soulmate">Come find your soulmate and save a kitties a life!</span>
+    <span class="soulmate">Come find your fur soulmate and save a kitties life!</span>
     <a class="viewCats" href="#">View all cats</a>
 </div>
 <div class="findKittyPic">
